# guardian

./: .gitattributes  .gitignore  .llvmcov.toml  AGENTS.md  Cargo.toml  MAINTAINERS.md  NOTICE.txt  NOTICES  PLAN.md  README.md  ROADMAP.md  SECURITY.md  biome.json  build.rs  package-lock.json  package.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: nightly.yml
assets/: connect_bypass_lib.js  connect_handshake_lib.js  connect_hook.js  env_inject.js
config/: guardian.toml
patches/: proxyapi+0.4.5.patch  proxyapi+0.4.5.patch.orig  proxyapi-tps-swap.patch
scripts/: apply_proxyapi_patch.rs  build-linux-smoke.zx.ts  build-local.sh  build-mac-smoke.sh  build-mac-smoke.zx.ts  build-release.sh  build-smoke.sh  build-win-smoke.ps1  build-win-smoke.zx.ts  connect-bypass.test.ts  connect-handshake.test.ts  coverage-linux.zx.ts  coverage-mac.sh  coverage-mac.zx.ts  coverage-win.zx.ts  coverage.ps1  coverage.sh  coverage.zx.ts  pack-release.zx.ts  rustc-codesign-wrapper.sh  rustc-codesign-wrapper.zx.ts  smoke-all.sh  smoke.zx.ts  sync-win-smoke-build.ps1  test-servers.ts
scripts/lib/: archive.ts  cargo.ts  coverage.ts  guard.ts  jdk.ts  mac-codesign.sh  mac-codesign.ts  release-pack.ts  repo.ts  resolve-exec.ts  run-zx.ts  stage-frida.ts  win-msvc-env.ps1
scripts/smoke/: assert.ts  cases.toml  cases.ts  dns.ts  local-origin.ts  platform.ts  run-cases.ts  run-tpf-cases.ts  run.ps1  run.sh  timeout.ts  tpf-cases.ts  tpf-mock-server.ts
scripts/smoke/lib/: assert.ps1  assert.sh  common.ps1  common.sh
src/: ca.rs  child_exit.rs  clean.rs  cli.rs  config.rs  filter.rs  frida_ext.rs  injector.rs  install.rs  jsonl.rs  main.rs  mkcert.rs  notes.rs  port.rs  proxy.rs  secure_file.rs  signals.rs  system_trust.rs  test_lock.rs  trypanophobe.rs  ui.rs
tests/: binary_post.rs  body_limit.rs  check_system.rs  child_exit_code.rs  clean_cli.rs  command_mode_host_env.rs  config_file.rs  connect_handshake.rs  custom_http_port.rs  dns_resolution.rs  env_injection.rs  env_skip.rs  filter_host_bundle.rs  fixed_port.rs  https_child_spawn.rs  https_direct.rs  interrupt.rs  invalid_bind.rs  java_truststore.rs  loopback_bypass.rs  macos_sh_replacement.rs  missing_program.rs  mitm_http2.rs  mitm_ipv6.rs  mitm_passthrough.rs  mitm_sse_streaming.rs  mitm_tpf_pass.rs  no_color.rs  non_http_passthrough.rs  notes_flags.rs  silent.rs  spawn_failure.rs  tpf_http_mitm_swap.rs  tpf_query.rs  tpf_swap.rs  tps_without_tpf_errors.rs  trypanophobe_filter_suite.rs  trypanophobe_payload.rs  trypanophobe_payload_filter.rs  trypanophobe_payload_stdin.rs  (+2 more)
tests/common/: mod.rs
tools/: README.md
tools/patch-proxyapi/: Cargo.toml
tools/patch-proxyapi/src/: main.rs
