[package]
name = "guardian"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Intercept and log HTTP/S and WebSocket traffic for any command"
build = "build.rs"

[dependencies]
frida = { version = "0.17", features = ["auto-download"] }
frida-sys = "0.17"
proxyapi = "0.4"
proxyapi_models = "0.4"
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-util = "0.7"
dirs = "6"
anyhow = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
port_check = "0.3"
which = "8"
http = "1"
bytes = "1"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots", "native-tls"] }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
native-tls = { version = "0.2", optional = true }
colored = "3"
privilege = "0.3"
sha2 = "0.10"
x509-parser = "0.16"
hex = "0.4"

[patch.crates-io]
proxyapi = { path = "./target/patch/proxyapi-0.4.5" }

[features]
ws-smoke = ["dep:tokio-tungstenite", "dep:futures-util", "dep:native-tls"]

[[bin]]
name = "guardian-ws-smoke"
path = "src/bin/ws_smoke.rs"
required-features = ["ws-smoke"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
which = "8"
proxyapi = "0.4"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
